common type and value audit type add IA-127

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
@@ -1,1 +1,182 @@
-<p>risk-assessment works!</p>
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-header">
+            <div class="fa fa-align-justify" >Risk Assessment List</div> 
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-7 mb-2">
+                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create Risk Assessment</button> 
+  
+              </div>
+              <div class="col-sm-5 mb-2">
+                <div class="row">
+                  <div class="col-8">
+                    <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
+                  </div>
+                  <div class="col-2">
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
+                      Search
+                  </button>
+                  </div>
+                  <div class="col-2">
+                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal"  >
+                      Reset
+                  </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row overflow-auto">
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                  <thead>
+                    <tr>
+                      <th>Level of Likelihood</th>
+                      <th>Level of impact</th>
+                      <th>Risk Rating</th>
+                      <th>Description</th>
+                      <th>Effective From</th>
+                      <th>Effective To</th>  
+                      <th>Action</th>                   
+                    </tr>
+                  </thead>
+                  <tbody *ngIf="riskAssessments?.length != 0">
+                    <tr *ngFor="let riskAssessment of riskAssessments">
+                      <td>{{ riskAssessment.likelihoodType }}</td>
+                      <td>{{ riskAssessment.impactType }}</td>
+                      <td>{{ riskAssessment.ratingType }}</td>
+                      <td>{{ riskAssessment.description }}</td>
+                      <td>{{ riskAssessment.effectiveFrom | date:'medium' }}</td>
+                      <td>{{ riskAssessment.effectiveTo | date:'medium' }}</td>
+                      <td>
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                          <button type="button" class="btn btn-secondary btnSaveColor" (click)="edit(verticallyCenteredModal,riskAssessment)">
+                           Edit
+                          </button>
+                          <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(riskAssessment.id)">
+                            Delete
+                          </button>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                  <tbody *ngIf="riskAssessments?.length == 0">
+                    <tr>
+                      <td colspan="5" class="no-data-available">No data!</td>
+                    </tr>
+                  </tbody>
+                </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <form [formGroup]="riskAssessmentForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate>
+  <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
+    <c-modal-header>
+      <h5 cModalTitle *ngIf="!formService.isEdit(this.riskAssessmentForm.get('id'))">Create Risk Assessment</h5>
+      <h5 cModalTitle *ngIf="formService.isEdit(this.riskAssessmentForm.get('id'))">Update Risk Assessment</h5>
+      <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
+    </c-modal-header>
+     <c-modal-body>
+      <div class="col-md-12" >
+        <input type="hidden" formControlName="id"/>  
+          <div form-floating>
+            <select aria-label="Floating label select example" cSelect id="likelihoodTypeId"
+              formControlName="likelihoodTypeId" name="likelihoodTypeId">
+              <option value=null>Select Likelihood Level</option>
+              <option *ngFor="let commonValueAndType of likelihoodType" [value]="commonValueAndType.id">
+                {{commonValueAndType.text}}
+              </option>
+            </select>
+          </div>
+
+          <div cRow *ngIf="(riskAssessmentForm.get('likelihoodTypeId')?.invalid && riskAssessmentForm.get('likelihoodTypeId')?.errors) &&         
+            (riskAssessmentForm.get('likelihoodTypeId')?.dirty || riskAssessmentForm.get('likelihoodTypeId')?.touched)">
+            <small class="text-danger">
+              This field is required.
+            </small>                                 
+          </div> 
+          <br>
+
+          <div form-floating>
+            <select aria-label="Floating label select example" cSelect id="impactTypeId"
+              formControlName="impactTypeId" name="impactTypeId">
+              <option value="null">Select Impact Level</option>
+              <option *ngFor="let commonValueAndType of impactType" [value]="commonValueAndType.id">
+                {{commonValueAndType.text}}
+              </option>
+            </select>
+          </div>
+
+          <div cRow *ngIf="((riskAssessmentForm.get('impactTypeId')?.invalid && riskAssessmentForm.get('impactTypeId')?.errors)) &&
+            (riskAssessmentForm.get('impactTypeId')?.dirty || riskAssessmentForm.get('impactTypeId')?.touched)">
+            <small class="text-danger">
+              This field is required.
+            </small>                                 
+          </div> 
+          <br>
+
+          <div form-floating>
+            <select aria-label="Floating label select example" cSelect id="ratingTypeId"
+              formControlName="ratingTypeId" name="ratingTypeId">
+              <option value="null">Select Risk Rating</option>
+              <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
+                {{commonValueAndType.text}}
+              </option>
+            </select>
+          </div>
+
+          <div cRow *ngIf="((riskAssessmentForm.get('ratingTypeId')?.invalid && riskAssessmentForm.get('ratingTypeId')?.errors)) &&
+            (riskAssessmentForm.get('ratingTypeId')?.dirty || riskAssessmentForm.get('ratingTypeId')?.touched)">
+            <small class="text-danger">
+              This field is required.
+            </small>                                 
+          </div> 
+          <br>
+
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="description" formControlName="description" id="description"></textarea>
+            <label for="floatingTextarea">Description</label>
+          </div>
+          <br>
+          
+          <div class="form-floating">
+            <input class="form-control" placeholder="effectiveFrom" formControlName="effectiveFrom" id="effectiveFrom" type="date" >
+            <label for="effectiveFrom">Effective From</label>
+          </div>
+          <div cRow *ngIf="riskAssessmentForm.get('effectiveFrom')?.invalid && riskAssessmentForm.get('effectiveFrom')?.errors &&
+                (riskAssessmentForm.get('effectiveFrom')?.dirty || riskAssessmentForm.get('effectiveFrom')?.touched)">
+            <small class="text-danger" *ngIf="riskAssessmentForm.get('effectiveFrom').hasError('required')">
+              This field is required.
+            </small>                                 
+          </div>
+          <br>
+
+          <div class="form-floating">
+            <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo" id="effectiveTo" type="date" >
+            <label for="effectiveTo">Effective To</label>
+          </div>
+          <div cRow *ngIf="riskAssessmentForm.get('effectiveTo')?.invalid && riskAssessmentForm.get('effectiveTo')?.errors &&
+                (riskAssessmentForm.get('effectiveTo')?.dirty || riskAssessmentForm.get('effectiveTo')?.touched)">
+            <small class="text-danger" *ngIf="riskAssessmentForm.get('effectiveTo').hasError('required')">
+              This field is required.
+            </small>                                 
+          </div>
+          <br>          
+  
+      </div>
+    </c-modal-body> 
+     <c-modal-footer>
+      <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit(verticallyCenteredModal)">Save</button>
+           <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1"> 
+            Close
+       </button> 
+    </c-modal-footer> 
+  </c-modal>
+  </form>
+  
