--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
@@ -3,13 +3,12 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <div class="fa fa-align-justify" >Risk Profile List</div> 
+            <div class="fa fa-align-justify" >Risk Criteria List</div> 
           </div>
           <div class="card-body">
             <div class="row">
               <div class="col-sm-7 mb-2">
-                    <!-- <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create Risk Criteria</button> -->
-  
+                 <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create</button> 
               </div>
               <div class="col-sm-5 mb-2">
                 <div class="row">
@@ -37,8 +36,7 @@
               </div>
             </div>
             <div class="row overflow-auto">
-                <!-- <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" > -->
-                    <table>
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >                    
                   <thead>
                     <tr>
                        <th>Country</th>
@@ -53,10 +51,10 @@
                       <th>Action</th>                 
                     </tr>
                   </thead>
-                  <!-- <tbody *ngIf="riskCriteriaForm?.length != 0"> -->
-                    <tr *ngFor="let riskCriteria of riskCriteriaForm">
+                    <tbody *ngIf="riskCriterias?.length != 0"> 
+                    <tr *ngFor="let riskCriteria of riskCriterias">
 
-                      <td>{{ riskCriteria.countryId }}</td>
+                      <td>{{ riskCriteria.countryName }}</td>
                       <td>{{ riskCriteria.riskCriteriaType }}</td>
                       <td>{{ riskCriteria.minimumValue }}</td>
                       <td>{{ riskCriteria.maximumValue }}</td>
@@ -76,12 +74,12 @@
                         </div>
                       </td>
                     </tr>
-                  <!-- </tbody> -->
-                  <!-- <tbody *ngIf="riskCriteriaForm?.length == 0"> -->
+                  
+                   <tbody *ngIf="riskCriterias?.length == 0"> 
                     <tr>
                       <td colspan="5" class="no-data-available">No data!</td>
                     </tr>
-                  <!-- </tbody> -->
+                   </tbody>
                 </table>
             </div>
           </div>
@@ -91,14 +89,14 @@
   </div>
 
   <form>
-  <!-- <form [formGroup]="riskCriteriaForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate> -->
-    <!-- <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
+  <form [formGroup]="riskCriteriaForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate>
+    <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
       <c-modal-header>
         <h5 cModalTitle *ngIf="!formService.isEdit(this.riskCriteriaForm.get('id'))">Create Risk Criteria</h5>
         <h5 cModalTitle *ngIf="formService.isEdit(this.riskCriteriaForm.get('id'))">Update Risk Criteria</h5>
         <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
-      </c-modal-header> -->
-       <!-- <c-modal-body> -->
+      </c-modal-header> 
+       <c-modal-body>
         <div class="col-md-12" >
           <input type="hidden" formControlName="id"/>  
            
@@ -137,25 +135,59 @@
             </div> 
             <br>
 
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="minimumValue" formControlName="minimumValue" id="minimumValue"></textbox>
-                <label for="floatingTextarea">Minimum Value</label>
-              </div>
 
-              <div class="form-floating">
-                <textarea class="form-control" placeholder="maximumValue" formControlName="maximumValue" id="maximumValue"></textbox>
-                <label for="floatingTextarea">Maximum Value</label>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" formControlName="minimumValue" id="minimumValue" placeholder="Minimum Value">
+                <label for="floatingInput">Minimum Value</label>
               </div>
-  
-
-  
+           
+              <div cRow *ngIf="riskCriteriaForm.get('minimumValue')?.invalid &&
+              riskCriteriaForm.get('minimumValue')?.errors &&
+                    (riskCriteriaForm.get('minimumValue')?.dirty || riskCriteriaForm.get('minimumValue')?.touched)">
+                <small class="text-danger"
+                    *ngIf="riskCriteriaForm.get('minimumValue').hasError('required')">
+                    This field is required.
+                </small>
+                <small class="text-danger"
+                    *ngIf="riskCriteriaForm.get('minimumValue').hasError('minlength')">
+                    The minimum length for this field is {{riskCriteriaForm.get('minimumValue').errors.minlength.requiredLength}} characters.
+                </small>
+                <small class="text-danger"
+                    *ngIf="countryForm.get('minimumValue').hasError('maxlength')">
+                    The maximum length for this field is {{riskCriteriaForm.get('minimumValue').errors.maxlength.requiredLength}} characters.
+                </small>
+            </div>
+      
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" formControlName="maximumValue" id="code" placeholder="Maximum Value">
+                <label for="floatingInput">Maximum Value</label>
+              </div>
+      
+              <div cRow *ngIf="riskCriteriaForm.get('maximumValue')?.invalid &&
+              riskCriteriaForm.get('maximumValue')?.errors &&
+                    (riskCriteriaForm.get('maximumValue')?.dirty || riskCriteriaForm.get('maximumValue')?.touched)">
+                <small class="text-danger"
+                    *ngIf="riskCriteriaForm.get('maximumValue').hasError('required')">
+                    This field is required.
+                </small>
+                <small class="text-danger"
+                    *ngIf="riskCriteriaForm.get('maximumValue').hasError('minlength')">
+                    The minimum length for this field is {{riskCriteriaForm.get('maximumValue').errors.minlength.requiredLength}} characters.
+                </small>
+                <small class="text-danger"
+                    *ngIf="countryForm.get('maximumValue').hasError('maxlength')">
+                    The maximum length for this field is {{riskCriteriaForm.get('maximumValue').errors.maxlength.requiredLength}} characters.
+                </small>
+            </div>
+            <br>
+      
             <div form-floating>
               <select aria-label="Floating label select example" cSelect id="ratingTypeId"
                 formControlName="ratingTypeId" name="ratingTypeId">
                 <option value="null">Select Risk Rating</option>
-                <!-- <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
-                  
-                </option> -->
+                <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
+                  {{commonValueAndType.text}}
+                </option>
               </select>
             </div>
   
@@ -166,16 +198,36 @@
               </small>                                 
             </div> 
             <br>
+
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" formControlName="score" id="score" placeholder="Score">
+              <label for="floatingInput">Score</label>
+            </div>
+    
+    
+            <div cRow *ngIf="riskCriteriaForm.get('score')?.invalid &&
+            riskCriteriaForm.get('score')?.errors &&
+                  (riskCriteriaForm.get('score')?.dirty || riskCriteriaForm.get('score')?.touched)">
+              <small class="text-danger"
+                  *ngIf="riskCriteriaForm.get('score').hasError('required')">
+                  This field is required.
+              </small>
+              <small class="text-danger"
+                  *ngIf="riskCriteriaForm.get('score').hasError('minlength')">
+                  The minimum length for this field is {{riskCriteriaForm.get('score').errors.minlength.requiredLength}} characters.
+              </small>
+              <small class="text-danger"
+                  *ngIf="countryForm.get('score').hasError('maxlength')">
+                  The maximum length for this field is {{riskCriteriaForm.get('score').errors.maxlength.requiredLength}} characters.
+              </small>
+          </div>
   
             <div class="form-floating">
               <textarea class="form-control" placeholder="description" formControlName="description" id="description"></textarea>
               <label for="floatingTextarea">Description</label>
             </div>
-            <!-- <small class="text-danger"
-                      *ngIf="riskProfileForm.get('description')?length && riskProfileForm.get('description').hasError('maxlength')">
-                      The maximum length for this field is {{riskProfileForm.get('description').errors.maxlength.requiredLength}} characters.
-            </small> -->
             <br>
+            
             
             <div class="form-floating">
               <input class="form-control" placeholder="effectiveFrom" formControlName="effectiveFrom" id="effectiveFrom" type="date" >
@@ -183,7 +235,7 @@
             </div>
             <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
                   (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
-              <small class="text-danger" *ngIf="riskProfileForm.get('effectiveFrom').hasError('required')">
+              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveFrom').hasError('required')">
                 This field is required.
               </small>                                 
             </div>
@@ -195,19 +247,19 @@
             </div>
             <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
                   (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
-              <small class="text-danger" *ngIf="riskProfileForm.get('effectiveTo').hasError('required')">
+              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveTo').hasError('required')">
                 This field is required.
               </small>                                 
             </div>
             <br>          
     
         </div>
-      <!-- </c-modal-body> 
+      </c-modal-body> 
        <c-modal-footer>
         <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit(verticallyCenteredModal)">Save</button>
              <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1"> 
               Close
          </button> 
       </c-modal-footer> 
-    </c-modal> -->
+    </c-modal>
     </form>
