--- a/src/ui/internal-audit/src/app/views/private/security/profile-update/profile-update.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/profile-update/profile-update.component.html
@@ -3,7 +3,7 @@
 <c-card>
   <c-card-header>Update Your Profile</c-card-header>
   <c-card-body>
-    <form [formGroup]="profileUpdateForm">
+    <form [formGroup]="profileUpdateForm" (submit)="submit()">
         <div (click)="clickFileControl('profileImage')" class="w-50 m-auto profile-image-div">
           <img *ngIf="imageUrl == ''" src="assets/img/avatars/1.jpg" class="profile-image">
           <img *ngIf="imageUrl != ''" src="{{imageUrl}}" class="profile-image">
@@ -12,7 +12,19 @@
           <div class="mt-2">
             <input type="text" placeholder="Full Name" class="form-control" formControlName="fullName" (tap)="clickFileControl('profileImage')">
           </div>
-          <input type="file" class="d-none" formControlName="profileImage" id="profileImage" (change)="onFileChange($event)">
+          <input type="file" class="d-none" formControlName="ProfileImageUrl" id="profileImage" (change)="onFileChange($event)">
+          <div class="mt-0 mb-2" cRow *ngIf="profileUpdateForm.get('fullName')?.invalid &&
+        profileUpdateForm.get('fullName')?.errors &&
+                      (profileUpdateForm.get('fullName')?.dirty || profileUpdateForm.get('fullName')?.touched)">
+            <small class="text-danger"
+                   *ngIf="profileUpdateForm.get('fullName').hasError('required')">
+              This field is required.
+            </small>
+            <small class="text-danger"
+                   *ngIf="profileUpdateForm.get('fullName').hasError('minlength')">
+              The minimum length for this field is {{profileUpdateForm.get('fullName').errors.minlength.requiredLength}} characters.
+            </small>
+          </div>
         </div>
         <button cButton class="mt-4" (click)="submit()">Update Profile</button>
     </form>
