common css, topic head

--- a/src/ui/internal-audit/src/app/containers/default-layout/default-layout.component.html
+++ b/src/ui/internal-audit/src/app/containers/default-layout/default-layout.component.html
@@ -2,6 +2,7 @@
 <c-sidebar
   #sidebar1="cSidebar"
   class="d-print-none sidebar sidebar-fixed"
+  style="background-color: #002e4d;"
   id="sidebar1"
   visible
 >
