--- a/src/ui/internal-audit/src/scss/_custom.scss
+++ b/src/ui/internal-audit/src/scss/_custom.scss
@@ -36,7 +36,7 @@
    margin-left: 10%;
 } 
  .btnCreateColor{
-   background-color: #036203;// hwb(152 10% 54% / 0.856);
+   background-color: #1a754ada;// hwb(152 10% 54% / 0.856);
    color: rgb(255, 255, 255);   
    min-width: 40px;
 }
