--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -9,7 +9,9 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-7 mb-2">
-                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>Create Designation</button>
+                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                  </button>
   
               </div>
               <div class="col-sm-5 mb-2">
@@ -18,7 +20,7 @@
                     <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
                     <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
                   </div>
-                  <div class="col-2">
+                  <div class="col-4">
                     <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button> -->
@@ -26,37 +28,30 @@
                       Search
                   </button>
                   </div>
-                  <div class="col-2">
-                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="clearSearch()" >
-                        <i [ngClass]="searchText ? 'fa fa-times' : 'fa fa-refresh'" aria-hidden="true"></i>
-                    </button> -->
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal"  >
-                      Reset
-                  </button>
-                  </div>
+                  
                 </div>
               </div>
             </div>
             <div class="row overflow-auto">
-                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover datatableStyle" >
                   <thead>
                     <tr>
                       <th>Designation</th>
                       <th>Description</th>   
-                      <th>Action</th>                      
+                      <th class="col-2 text-center">Action</th>                      
                     </tr>
                   </thead>
                   <tbody *ngIf="designations?.length != 0">
                     <tr *ngFor="let designation of designations">
                       <td>{{ designation.name }}</td>
                       <td>{{ designation.description }}</td>                      
-                      <td>
+                      <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-info btnSaveColor" (click)="edit(verticallyCenteredModal,designation)">
-                           Edit
+                          <button type="button" class="btn btn-info btnEditColor" (click)="edit(verticallyCenteredModal,designation)">
+                            <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
                           </button>
                           <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(designation.id)">
-                           Delete
+                            <svg cIcon name="cilTrash" size="md" title="Delete Button Icon"></svg>
                           </button>
                         </div>
                       </td>
@@ -117,9 +112,11 @@
         </div>
       </c-modal-body>
       <c-modal-footer>
-        <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit(verticallyCenteredModal)">Save</button>
+        <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit(verticallyCenteredModal)">
+          <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Save
+        </button>
         <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1">
-          Close
+          <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg> Close
         </button>        
       </c-modal-footer>
     </c-modal>
