--- a/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-registration/user-registration.component.html
@@ -215,9 +215,12 @@
 
         <c-col xs="12">
           <c-col md>
-            <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit()">Save</button>
-            <button cButton class="btn btn-danger btnCancelColor me-1"
-              onclick=" window.location.reload();">Cancel</button>
+            <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmit()">
+              <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Save
+            </button>
+            <button cButton class="btn btn-danger btnCancelColor me-1" onclick=" window.location.reload();">
+              <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg>Cancel
+            </button>
 
           </c-col>
         </c-col>
